tests/sksl/errors/golden/WhileFalseIsEvaluated.glsl
### Compilation failed:

error: 3: type mismatch: '=' cannot operate on 'half4', 'bool4'
1 error
